<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#000000">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/afolus_background_logo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/afolus" />

        <LinearLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/phone_numbers"
                    app:srcCompat="@android:drawable/stat_sys_phone_call" />

                <TextView
                    android:id="@+id/tv_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/phone_numbers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#FFFFFF"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/phone_numbers"
                    app:srcCompat="@android:drawable/ic_dialog_email" />

                <TextView
                    android:id="@+id/tv_email_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#FFFFFF"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/phone_numbers"
                    app:srcCompat="@android:drawable/btn_star_big_off" />

                <TextView
                    android:id="@+id/tv_website_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/website"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#FFFFFF"
                    android:typeface="monospace" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_address_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/address"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tv_biz_description_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:singleLine="false"
                android:text="@string/biz_description"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tv_time_schedule_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/time_schedule"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />
        </LinearLayout>

        <!--    <TextView
            android:id="@+id/tv_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/imageView"
            android:layout_alignBottom="@id/imageView"
            android:layout_marginStart="8sp"
            android:layout_marginBottom="8dp"
            android:text="@string/afolus_technology_solution"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF" />-->

    </RelativeLayout>
</ScrollView>